--- a/front nxt 2 jan/frontend/src/Createusers.css
+++ b/front nxt 2 jan/frontend/src/Createusers.css
@@ -113,7 +113,7 @@ input, select {
 }
 
 button {
-    background: #bc171b;
+    background: #e74c3c;
     color: white;
     padding: 10px;
     border: none;
